--- a/tokio-util/Cargo.toml
+++ b/tokio-util/Cargo.toml
@@ -48,14 +48,18 @@ tracing = { version = "0.1.25", default-features = false, features = ["std"], op
 hashbrown = { version = "0.12.0", optional = true }
 
 [dev-dependencies]
-tokio = { version = "1.0.0", path = "../tokio", features = ["full"] }
 tokio-test = { version = "0.4.0", path = "../tokio-test" }
 tokio-stream = { version = "0.1", path = "../tokio-stream" }
-
 async-stream = "0.3.0"
 futures = "0.3.0"
 futures-test = "0.3.5"
 parking_lot = "0.12.0"
+
+[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
+tokio = { version = "1.0.0", path = "../tokio", features = ["full"] }
+
+[target.'cfg(target_env = "sgx")'.dev-dependencies]
+tokio = { version = "1.0.0", path = "../tokio", features = ["full-sgx"] }
 
 [package.metadata.docs.rs]
 all-features = true
