--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -41,6 +41,18 @@ full = [
   "time",
 ]
 
+# everything possible in SGX
+full-sgx = [
+  "io-util",
+  "io-std",
+  "macros",
+  "net",
+  "rt",
+  "rt-multi-thread",
+  "sync",
+  "time",
+]
+
 fs = []
 io-util = ["memchr", "bytes"]
 # stdin, stdout, stderr
@@ -124,14 +136,16 @@ tokio-test = { version = "0.4.0", path = "../tokio-test" }
 tokio-stream = { version = "0.1", path = "../tokio-stream" }
 futures = { version = "0.3.0", features = ["async-await"] }
 mockall = "0.10.2"
-proptest = "1"
 rand = "0.8.0"
 tempfile = "3.1.0"
 async-stream = "0.3"
-socket2 = "0.4"
 
 [target.'cfg(target_os = "freebsd")'.dev-dependencies]
 mio-aio = { version = "0.6.0", features = ["tokio"] }
+
+[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
+socket2 = "0.4"
+proptest = "1"
 
 [target.'cfg(loom)'.dev-dependencies]
 loom = { version = "0.5", features = ["futures", "checkpoint"] }
@@ -142,3 +156,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [package.metadata.playground]
 features = ["full", "test-util"]
+
+# set number of threads so tests can run properly
+[package.metadata.fortanix-sgx]
+threads=100
