--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # If you copy one of the examples into a new project, you should be using
 # [dependencies] instead.
 [dev-dependencies]
-tokio = { version = "1.0.0", path = "../tokio",features = ["full", "tracing"] }
 tokio-util = { version = "0.6.3", path = "../tokio-util",features = ["full"] }
 tokio-stream = { version = "0.1", path = "../tokio-stream" }
 
@@ -23,6 +22,12 @@ httparse = "1.0"
 httpdate = "1.0"
 once_cell = "1.5.2"
 rand = "0.8.3"
+
+[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
+tokio = { version = "1.0.0", path = "../tokio",features = ["full", "tracing"] }
+
+[target.'cfg(target_env = "sgx")'.dev-dependencies]
+tokio = { version = "1.0.0", path = "../tokio",features = ["full-sgx", "tracing"] }
 
 [target.'cfg(windows)'.dev-dependencies.winapi]
 version = "0.3.8"
