--- a/tokio-util/Cargo.toml
+++ b/tokio-util/Cargo.toml
@@ -48,13 +48,17 @@ pin-project-lite = "0.2.0"
 slab = { version = "0.4.1", optional = true } # Backs `DelayQueue`
 
 [dev-dependencies]
-tokio = { version = "1.0.0", path = "../tokio", features = ["full"] }
 tokio-test = { version = "0.4.0", path = "../tokio-test" }
 tokio-stream = { version = "0.1", path = "../tokio-stream" }
-
 async-stream = "0.3.0"
 futures = "0.3.0"
 futures-test = "0.3.5"
+
+[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
+tokio = { version = "1.0.0", path = "../tokio", features = ["full"] }
+
+[target.'cfg(target_env = "sgx")'.dev-dependencies]
+tokio = { version = "1.0.0", path = "../tokio", features = ["full-sgx"] }
 
 [package.metadata.docs.rs]
 all-features = true
