--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -164,3 +164,4 @@ features = ["full", "test-util"]
 # set number of threads so tests can run properly
 [package.metadata.fortanix-sgx]
 threads=100
+runner = "runner"
